[project]
name = "travel-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "pydantic>=2.13.4",
    "pymongo>=4.17.0",
    "serpapi>=1.0.2",
    "uvicorn[standard]>=0.51.0",
]
