[project]
name = "travel-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "langchain>=1.3.13",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-mongodb>=0.4.0",
    "langsmith>=0.10.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "pymongo>=4.12,<4.17",
    "requests>=2.32.0",
    "serpapi>=1.0.2",
    "streamlit>=1.40.0",
    "uvicorn[standard]>=0.51.0",
]
